remove smellws